--- a/lib/Form/Tiny/Manual/Compatibility.pod
+++ b/lib/Form/Tiny/Manual/Compatibility.pod
@@ -10,6 +10,47 @@ This documentation page is listing all non-backward compatible changes in usage 
 
 =head1 CHANGES
 
+=head2 Using three-argument field_filter (passing context explicitly)
+
+I<Changed in 2.04>
+
+	# Old form
+	field_filter 'field_name', Type, sub { ... };
+
+	# New form - use context instead
+	form_field 'field_name';
+	field_filter Type, sub { ... };
+
+=head2 Using Form::Tiny::Filter 'field' property
+
+I<Changed in 2.04>
+
+	# Old form
+	field_filter Form::Tiny::Filter->new(
+		field => 'field_name',
+		type => Type,
+		code => sub { ... },
+	);
+
+	# New form - use context instead
+	form_field 'field_name';
+	field_filter Form::Tiny::Filter->new(
+		type => Type,
+		code => sub { ... },
+	);
+
+=head2 Input data is no longer deep cloned before validation
+
+I<Changed in 2.01 - considered bugfix>
+
+In previous versions, the validation process started off by deep cloning the input by calling C<Storable::dclone> on it. It was unnecessary and had the potential to lead to subtle bugs.
+
+The validation process is cloning most of the input by itself by mangling fields and then putting them back in the result hashref, much alike the input one, but completely separate. However, if you specify that a field should be an object of certain type, that will not get cloned. Same for explicit array and hash references (not those specified as a path, like C<key1.key2>). Removing deep cloning fixed that, as those would get cloned anyway.
+
+So now, if you specify your field to contain something that is not a reference, it will get cloned. If you specify something that is a reference, it will not get cloned, and changing it will also change that single key in the input hash. You have all the power to decide.
+
+If you still want to deep clone your input data you can use the C<reformat> hook for that. See L<Form::Tiny::Manual/"Hooks">.
+
 =head2 Filtered forms no longer trim strings by default
 
 I<Changed in 2.00>
@@ -112,48 +153,11 @@ In the past, it was possible to define a form by defining three methods in the p
 
 If you happened to use the module during its early days, you must adjust your code to the new DSL style. It should not require drastic changes, but rather moving declarations out from class methods to DSL keywords. Refer to L<Form::Tiny/"Form domain-specific language"> for details.
 
-=head2 Input data is no longer deep cloned before validation
-
-I<Changed in 2.01 - considered bugfix>
-
-In previous versions, the validation process started off by deep cloning the input by calling C<Storable::dclone> on it. It was unnecessary and had the potential to lead to subtle bugs.
-
-The validation process is cloning most of the input by itself by mangling fields and then putting them back in the result hashref, much alike the input one, but completely separate. However, if you specify that a field should be an object of certain type, that will not get cloned. Same for explicit array and hash references (not those specified as a path, like C<key1.key2>). Removing deep cloning fixed that, as those would get cloned anyway.
-
-So now, if you specify your field to contain something that is not a reference, it will get cloned. If you specify something that is a reference, it will not get cloned, and changing it will also change that single key in the input hash. You have all the power to decide.
-
-If you still want to deep clone your input data you can use the C<reformat> hook for that. See L<Form::Tiny::Manual/"Hooks">.
-
 =head1 FUTURE COMPATIBILITY
 
 Starting from version I<2.00>, any backward incompatible changes will only be introduced to the module after a 3 month deprecation period. This does not cover bug fixes and changes to internal methods not meant to be used or depended on.
 
 =head2 Current deprecations
-
-=head3 Using three-argument field_filter (passing context explicitly)
-
-	# DEPRECATED
-	field_filter 'field_name', Type, sub { ... };
-
-	# OK - use context instead
-	form_field 'field_name';
-	field_filter Type, sub { ... };
-
-=head3 Using Form::Tiny::Filter 'field' property
-
-	# DEPRECATED
-	field_filter Form::Tiny::Filter->new(
-		field => 'field_name',
-		type => Type,
-		code => sub { ... },
-	);
-
-	# OK - use context instead
-	form_field 'field_name';
-	field_filter Form::Tiny::Filter->new(
-		type => Type,
-		code => sub { ... },
-	);
 
 =head3 Form::Tiny::Error::DoesNotExist is deprecated
 
