--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Form::Tiny.
 
+2.11 Sun May 8 2022
+	- add missing VERSION to Form::Tiny::Plugin
+	- fix compatibility with perl version 5.10
+
 2.10 Sat May 7 2022
 	- remove deprecated is_validated and clear_valid methods
 	- remove check if field default value passes field type test
