Create dedicated method for form_trim_strings

--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -485,7 +485,7 @@ Added behavior is entirely up to the plugin. See L<Form::Tiny::Plugin> for detai
 The module enables a way to create a form without the need of a dedicated package. This is done with the L<Form::Tiny::Inline> class. This requires the user to pass all the data to the constructor, as shown in the example:
 
 	my $form = Form::Tiny::Inline          #     An inline form ...
-	           ->is(qw/strict filtered/)   # ... with the strict mode and filters enabled ...
+	           ->is(qw/strict filtered/)   # ... with Strict and Filtered plugins ...
 	           ->new(                      # ... will be created with properties:
 		field_defs => [{name => "my_field"}],
 		cleaner => sub { ... },
