--- a/lib/Form/Tiny/Manual/Performance.pod
+++ b/lib/Form/Tiny/Manual/Performance.pod
@@ -35,6 +35,10 @@ While it may come useful, it is often unnecessary. The module already does not c
 
 Form::Tiny has a built in condition that allows it to optimize form validation when the form is "flat": no fields are nested or dynamic. If you can avoid having nested fields (fields with a dot, like C<hashref.key> or C<arrayref.*>) or dynamic fields (fields which are constructed by a sub) in you form, validation speed will be increased by up to 70%. The module can then completely skip searching for the field in the input structure and simply use its name as a key in the input hash reference.
 
+=head2 Class::XSAccessor
+
+When using Form::Tiny with Moo, installing Class::XSAccessor can provide small but free boost to runtime speed of the module.
+
 =head2 Type::Tiny::XS
 
 Form::Tiny uses a lot of Type::Tiny type constraints, both internally and in its form classes. Installing L<Type::Tiny::XS> should give them some XS boost, although it may be hard to measure exactly what kind of performance boost it gives.
