--- a/lib/Form/Tiny/Manual/Cookbook.pod
+++ b/lib/Form/Tiny/Manual/Cookbook.pod
@@ -8,7 +8,8 @@ Form::Tiny::Manual::Cookbook - common advanced tasks with Form::Tiny
 
 =head2 Corinna compatibility
 
-Future Perl core object orientation system named Corinna, currently implemented in L<Object::Pad>, can also be used together with Form::Tiny:
+Future Perl core object orientation system named Corinna, currently implemented
+in L<Object::Pad>, can also be used together with Form::Tiny:
 
 	use Object::Pad;
 
@@ -26,11 +27,14 @@ Future Perl core object orientation system named Corinna, currently implemented 
 		form_field 'f2';
 	}
 
-You must use C<:repr(HASH)> on the class for it to be able to store Moo properties, as well as use C<-nomoo> flag in Form::Tiny import. Other than that, it should work the same as with any other OO system.
+You must use C<:repr(HASH)> on the class for it to be able to store Moo
+properties, as well as use C<-nomoo> flag in Form::Tiny import. Other than
+that, it should work the same as with any other OO system.
 
 =head2 Mixing form fields with class fields
 
-It is possible and often very helpful to have both form and class fields inside the same form class:
+It is possible and often very helpful to have both form and class fields inside
+the same form class:
 
 	use Form::Tiny;
 	use Types::Standard qw(Str);
@@ -63,18 +67,22 @@ It is possible and often very helpful to have both form and class fields inside 
 		}
 	};
 
-While doing so, make sure not to override any of the L<Form::Tiny::Form> symbols (Moo / Moose should complain about it when it happens).
+While doing so, make sure not to override any of the L<Form::Tiny::Form>
+symbols (Moo/se should complain about it when it happens).
 
 =head2 I18N
 
-I<Form::Tiny> has no system for internationalization. That being said, it makes any custom error messages for fields possible with the C<message> argument to C<form_field>. You can translate your messages there:
+I<Form::Tiny> has no system for internationalization. That being said, it makes
+any custom error messages for fields possible with the C<message> argument to
+C<form_field>. You can translate your messages there:
 
 	form_field 'translated' => (
 		type => SomeType,
 		message => do_translate('That value is no good'),
 	);
 
-For a bit more roboust solution, you can include untranslated strings in C<message> and translate errors in C<after_error> hook:
+For a bit more roboust solution, you can include untranslated strings in
+C<message> and translate errors in C<after_error> hook:
 
 	form_field 'translated_later' => (
 		type => SomeType,
@@ -93,7 +101,8 @@ This will also translate any error you add manually in other hooks.
 
 =head2 Creating a role plugin
 
-It is possible to create a single package plugin that will mix in a role into the form class:
+It is possible to create a single package plugin that will mix in a role into
+the form class:
 
 	package Form::Tiny::Plugin::MyRolePlugin;
 
@@ -120,13 +129,18 @@ It is possible to create a single package plugin that will mix in a role into th
 
 	1;
 
-The late import of L<Moo::Role> prevents the C<plugin> method from being mixed in along with C<some_method>.
+The late import of L<Moo::Role> prevents the C<plugin> method from being mixed
+in along with C<some_method>.
 
 =head2 Empty forms
 
-Form::Tiny tries hard not to force you to finalize building your form like Moose does with C<make_immutable>. Form definition is built incrementally with each DSL call. One limitation of this is that if your form contains nothing, there's no place to process plugins and inheritance.
+Form::Tiny tries hard not to force you to finalize building your form like
+Moose does with C<make_immutable>. Form definition is built incrementally with
+each DSL call. One limitation of this is that if your form contains nothing,
+there's no place to process plugins and inheritance.
 
-In rare occasions where you actually want to have an empty form, you have to call C<form_meta> method on the package before going out of scope, for example:
+In rare occasions where you actually want to have an empty form, you have to
+call C<form_meta> method on the package before going out of scope, for example:
 
 	package ChildForm;
 
