--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -155,6 +155,21 @@ The example below illustrates how a form class could be used to validate data.
 		...
 	}
 
+C<< $form->fields >> returns a hash reference which can be used to access
+validated and fields, but that might often be suboptimal. Using a hash
+reference by hand opens up possibilities of other errors, such as typos in
+field names.
+
+Alternatively, C<< $form->value >> can be used to access a value of a single field:
+
+	if ($form->valid) {
+		my $first = $form->value('first_field_name');
+		my $other = $form->value('other_field_name');
+	}
+
+If the field name was misspelled, an exception will be raised. Refer to
+L<Form::Tiny::Form/value> for details.
+
 =head2 Form building
 
 You can use C<form_field> function to declare form fields, just like you would
