--- a/Changes
+++ b/Changes
@@ -1,7 +1,11 @@
 Revision history for Perl extension Form::Tiny.
 
-2.18 TODO
-	- documentation fixes
+2.18 Mon Aug 14 2023
+	- fix: field's addons (internal) are no longer assignable by the constructor
+	- fix: FieldDefinitionBuilder's "data" is now named "build_data" not to clash with FieldDefinition's "data"
+	- simplify and optimize Plugin::Strict
+	- improved subform behavior with default and adjust options: see Manual::Compatibility (gh#11)
+	- documentation improvements and fixes (gh#9)
 
 2.17 Sat Jan 7 2023
 	- resolve deprecation of Form::Tiny::Filter (removed the package)
