--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Form::Tiny.
 
+2.20 Tue Aug 22 2023
+	- fix memory leak in deep structure traversal
+
 2.19 Mon Aug 14 2023
 	- fix inline form behavior in some edge cases
 	- rewrite Plugin::Strict to use recently added blueprint metaobject method
