--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Form::Tiny.
 
+2.21 Wed Aug 23 2023
+	- fix adding errors from subform's array fields to the main form
+	- minor code refactorization
+	- minor performance improvements for nested form fields
+	- add metamodel documentation
+
 2.20 Tue Aug 22 2023
 	- fix memory leak in deep structure traversal
 
